--- a/Lesson04/Lesson04/Base.lproj/Main.storyboard
+++ b/Lesson04/Lesson04/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="YGA-y8-0uq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="YGA-y8-0uq">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="b69-3Y-BcU">
@@ -39,6 +39,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mLX-VK-tUP" userLabel="Deal Button">
                                         <rect key="frame" x="94.333333333333343" y="199.99999999999994" width="81.666666666666657" height="31"/>
                                         <state key="normal" image="dealbutton"/>
+                                        <connections>
+                                            <action selector="dealTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xwe-Xv-4oI"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -94,6 +97,12 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nGo-mQ-V4J" secondAttribute="trailing" constant="20" id="xT2-f2-15K"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leftImageView" destination="fs7-n8-xyr" id="msS-Lp-LPT"/>
+                        <outlet property="leftScoreLabel" destination="Xp4-gu-xPC" id="sjP-Da-709"/>
+                        <outlet property="rightImageView" destination="HiF-UX-zta" id="f7c-oe-oAh"/>
+                        <outlet property="rightScoreLabel" destination="REf-qq-x5y" id="XNc-tS-sIW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -101,7 +110,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="414" height="896"/>
+        <image name="Background" width="414" height="896"/>
         <image name="card10" width="120" height="170"/>
         <image name="card6" width="120" height="170"/>
         <image name="dealbutton" width="81.666664123535156" height="31"/>
